--- a/blog.html
+++ b/blog.html
@@ -8,8 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>blog | Jentery Sayers</title>
   <meta name="description" content="">
-  <link rel="canonical" href="http://jntry.work//blog.html">
-  <link rel="alternate" type="application/rss+xml" title="Jentery Sayers" href="http://jntry.work//feed.xml">
+  <link rel="canonical" href="http://localhost:4000/blog.html">
+  <link rel="alternate" type="application/rss+xml" title="Jentery Sayers" href="http://localhost:4000/feed.xml">
 
   <style type="text/css">
     
@@ -222,7 +222,81 @@
 
 <hr />
 
-<h1 id="uvic-has-a-media-studies-program-now"><a href="#uvic-has-a-media-studies-program-now">UVic Has a Media Studies Program Now</a></h1>
+<h1 id="2024-25-media-studies-courses"><a href="#2024-25-media-studies-courses">2024-25 Media Studies Courses</a></h1>
+
+<p><em>10 May 2024</em></p>
+
+<p>I’m thrilled to say UVic <a href="https://www.uvic.ca/humanities/media-studies/index.php">Media Studies</a> is offering five courses in 2024-25. That’s more than double the number we offered this year.</p>
+
+<p>I’ll teach <a href="https://www.uvic.ca/calendar/future/undergrad/index.php#/courses/HyVj9LZJi?bc=true&amp;bcCurrent=MDIA200%20-%20Media%20in%20the%2021st%20Century&amp;bcGroup=Media%20Studies%20(MDIA)&amp;bcItemType=courses">MDIA 200</a>, “Media in the 21st Century,” in the Fall and Spring. Pierre-Luc Landry (French and Francophone Studies) will teach our inaugural section of <a href="https://www.uvic.ca/calendar/future/undergrad/index.php#/courses/SyMpH_Z1j?group=Media%20Studies%20(MDIA)&amp;bc=true&amp;bcCurrent=Media%20Studies%20(MDIA)&amp;bcItemType=courses&amp;bc=true&amp;bcCurrent=MDIA300%20-%20Critical%20Media%20Practice&amp;bcGroup=Media%20Studies%20(MDIA)&amp;bcItemType=courses">MDIA 300</a>, “Critical Media Practice,” and Janelle Jenstad (English) will teach <a href="https://www.uvic.ca/calendar/future/undergrad/index.php#/courses/ryYgOdWkj?group=Media%20Studies%20(MDIA)&amp;bc=true&amp;bcCurrent=Media%20Studies%20(MDIA)&amp;bcItemType=courses&amp;bc=true&amp;bcCurrent=MDIA350%20-%20Cultures%20of%20the%20Book&amp;bcGroup=Media%20Studies%20(MDIA)&amp;bcItemType=courseshttps://www.uvic.ca/calendar/future/undergrad/index.php">MDIA 350</a>, “Cultures of the Book,” for the second time. We’ve a new course on the books, too: MDIA 360, “Game Studies,” which Sara Humphreys (ATWP) will teach in the Fall and I’ll teach in the Spring, and Alexandrine Boudreault-Fournier (Anthropology) will teach our inaugural section of <a href="https://www.uvic.ca/calendar/future/undergrad/index.php#/courses/rJRGF_byo?group=Media%20Studies%20(MDIA)&amp;bc=true&amp;bcCurrent=Media%20Studies%20(MDIA)&amp;bcItemType=courses&amp;bc=true&amp;bcCurrent=MDIA375%20-%20Cultures%20of%20Sound&amp;bcGroup=Media%20Studies%20(MDIA)&amp;bcItemType=courses">MDIA 375</a>, “Cultures of Sound.” We’ve an exciting year ahead!</p>
+
+<hr />
+
+<h1 id="my-orcid"><a href="#my-orcid">My ORCID</a></h1>
+
+<p><em>9 May 2024</em></p>
+
+<p>Nerd alert! I took a minute earlier this week to populate my <a href="https://orcid.org/0000-0002-7181-1703">Open Researcher and Contributor ID record</a>. I created some entries manually; however, many of them were generated automatically by BASE, Scopus, Crossref Metadata, The Lens, MLA’s international bib, and the like. The automatically generated data is nowhere near perfect. I encountered numerous errors, but I suppose those hiccups are the tradeoff for efficiency and ease of use. I’ll be interested to observe the benefits and drawbacks of using ORCID over a period of five or so years. More from me in 2030?</p>
+
+<hr />
+
+<h1 id="the-play-of-genre-in-video-games"><a href="#the-play-of-genre-in-video-games">The Play of Genre in Video Games</a></h1>
+
+<p><em>19 April 2024</em></p>
+
+<p>Yesterday, I gave a keynote at <a href="https://www.queensu.ca/english/about/events/reimagining-the-victorians-conference">“Re-Imagining the Victorians,”</a> facilitated by Brooke Cameron and Sydney Wildman at Queen’s University. My talk drew material from my current book project. I called it, <a href="archive/talks/queens24">“Victorian Activities and the Play of Genre in Video Games.”</a> After surveying what the Victorian period teaches us about games today, I focused on two neo-Victorian games: <em>80 Days</em> and <em>Strange Horticulture</em>. The Q&amp;A was fantastic, as were other talks at the conference. Peruse the <a href="archive/talks/queens24/reImaginingTheVictorians2024.pdf">program</a> if you’ve a moment.</p>
+
+<p>Many thanks to Brooke and Sydney for hosting me. I look forward to more discussions at the intersections of Victorian Studies and Game Studies.</p>
+
+<hr />
+
+<h1 id="congrats-to-margaret-kilcline-and-odu"><a href="#congrats-to-margaret-kilcline-and-odu">Congrats to Margaret Kilcline and ODU</a></h1>
+
+<p><em>12 March 2024</em></p>
+
+<p>Check this out! Some wonderful <a href="https://www.odu.edu/al/article/creative-ideas-sprout-and-thrive-inside-mpark">news from ODU</a>: “It’s compact in size, but there’s nothing small about the ambitions behind a new, humanities-focused makerspace at Old Dominion University. Called mpark, it opened late 2023 in Room 2027 of the university’s Batten Arts and Letters Building. Outfitted with a 3D printer, Arduino electronics learning kits, sewing machines, video recorders, cameras, printers and other tools and software, it functions as a miniature makerspace ‘that nurtures nonhierarchical collaborations across disciplines,’ wrote Margaret Kilcline/Konkol, an assistant professor of American literature and digital humanities and director of the new workshop.”</p>
+
+<p>Margaret adds: “I got my first taste of the magic of makerspaces at University of Victoria’s Digital Humanities Summer Institute. Jentery Sayers and Matt Huculak and others were at the center of an exciting makerspace movement in the UVic English Department and over the course of a one-week intensive workshop (I call it nerd camp at its finest), they introduced me and about 15 other souls to modeling and prototyping using SketchUp, AutoCAD, Arduinos, and laser cutters.”</p>
+
+<p>Thanks for the nod, Margaret. Everyone here at the <a href="/praxis">Praxis Studio</a> is pulling for you and mpark.</p>
+
+<hr />
+
+<h1 id="chatting-about-games-with-uvics-esa"><a href="#chatting-about-games-with-uvics-esa">Chatting about Games with UVic’s ESA</a></h1>
+
+<p><em>5 February 2024</em></p>
+
+<p>I had a lively conversation with Leia Soulsbury and Braedon Lowey on the <a href="https://podcasters.spotify.com/pod/show/uvic-esa"><em>Clearihue Corner</em></a> podcast produced by UVic’s English Students’ Association. We talked about games and interactive fiction from a literary perspective, and we wandered into other topics as well: from play, labor, romance, and the economy of games to issues of representation, self-expression, adaptation, design, and narration. The conversation is Episode 5 in Season 4 of the <em>Clearihue Corner</em>, and it’s titled <a href="https://podcasters.spotify.com/pod/show/uvic-esa/episodes/S4E05--Interactive-Fiction-is-All-Fun-and-Games-Office-Hours-with-Dr--Jentery-Sayers-e2f5hno">“Interactive Fiction Is All Fun and Games.”</a> Thanks so much, Leia and Braedon, for the invitation and taking the time to speak with me. I was chatty! Also, your description of the episode makes me smile:</p>
+
+<p>“You are scrolling through Spotify and stop at a podcast called the Clearihue Corner. <br />
+&gt;Investigate<br />
+This episode features a professor named Jentery Sayers, and seems to be about fiction in interactive forms: twine games, video games, choose your own adventure novels, and more. It features in depth discussion about how to analyze and talk about these kinds of narratives. Would you like to listen? <br />
+&gt;Yes <br />
+You press play, and the podcast begins.”</p>
+
+<hr />
+
+<h1 id="degrowing-digital-projects"><a href="#degrowing-digital-projects">Degrowing Digital Projects</a></h1>
+
+<p><em>18 November 2023</em></p>
+
+<p>I just wrapped up a brief visit to Texas A&amp;M’s <a href="https://liberalarts.tamu.edu/codhr/">Center of Digital Humanities Research</a> (CoDHR), where I met with faculty, students, and staff to discuss various topics, including games, pedagogy, infrastructure, data visualization, and minimal computing. I also gave a talk as part of their <a href="https://liberalarts.tamu.edu/codhr/programs/speaker-series/">Digital Humanities Speaker Series</a>. I titled it, <a href="archive/talks/tamu/">“Degrowing Digital Projects.”</a> CoDHR made a neat <a href="archive/talks/tamu/degrowing.png">poster</a> for the event, and here’s my abstract:</p>
+
+<p>“While digital projects in the humanities are frequently associated with innovation, less attention may be paid to their care and maintenance over time. This talk draws from recent research in activity theory and minimal computing as well as allied fields, such as game studies, to address the ‘degrowth’ of digital projects from the labor perspective. First, I outline the motives and trajectories of this perspective, and then I communicate the importance of value-sensitive design to determining three things: 1) a project’s needs and desires, 2) what work is required and from whom, and 3) how to sustain the labor involved. Degrowth aims to reduce computation’s alienating effects in the interests of social organization and collective expertise, and it does so by foregrounding the cultures and habits of digital projects over their technical particulars. These issues matter for the livelihood of practitioners as gig economics and precarious labor become the norm in the technology sector.”</p>
+
+<p>Many thanks to Maura Ives, Bryan Tarpley, Kayley Hart, and everyone in Texas A&amp;M’s digital humanities working group for hosting me. It was a fabulous time.</p>
+
+<hr />
+
+<h1 id="congrats-to-julie-funk"><a href="#congrats-to-julie-funk">Congrats to Julie Funk</a></h1>
+
+<p><em>15 July 2023</em></p>
+
+<p>Congratulations to UVic English-CSPT PhD student, <a href="https://www.juliemfunk.com/">Julie Funk</a>, who was awarded the 2023-24 Dean’s Dissertation Year Scholarship in the Humanities. Julie’s dissertation engages storytelling across contemporary media to address the biopower of hormones and the neoliberal techniques various industries use to manage them.</p>
+
+<hr />
+
+<h1 id="uvic-now-has-a-media-studies-program"><a href="#uvic-now-has-a-media-studies-program">UVic Now Has a Media Studies Program</a></h1>
 
 <p><em>1 July 2023</em></p>
 
