--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Jentery Sayers | UVic</title>
   <meta name="description" content="">
-  <link rel="canonical" href="http://jntry.work//">
-  <link rel="alternate" type="application/rss+xml" title="Jentery Sayers" href="http://jntry.work//feed.xml">
+  <link rel="canonical" href="http://localhost:4000/">
+  <link rel="alternate" type="application/rss+xml" title="Jentery Sayers" href="http://localhost:4000/feed.xml">
 
   <style type="text/css">
     
